[menu] FIX display
an item is displayed on one line, and is cut if too long

--- a/static/styles/ui.css
+++ b/static/styles/ui.css
@@ -153,6 +153,9 @@ ul.tree li {
 	line-height:30px;
 	font-weight:bold;
 	padding-left:5px;
+	white-space: nowrap;
+	text-overflow: ellipsis;
+	overflow: hidden;
 }
 
 ul.tree li {
